--- a/css/inicio/global.css
+++ b/css/inicio/global.css
@@ -1,4 +1,4 @@
-body{
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;  
@@ -8,38 +8,314 @@ header{
     display: grid;
     grid-template-rows: 15vh;
     grid-template-columns: 50% 50%;
+    background-color: #F90505;
+    background-color: #C80F2E;
+    background-color: #C90E2F;
+    background-color: #ffffbf;
+    background-color: #221f1f;
 }
 
 .logo{
     grid-column: 1 / 2;
-    background-color: aqua;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.logo p{
+    font-family: 'Rubik', sans-serif;
+    color: white;
 }
 
 nav{
     grid-column: 2 / 3;
-    background-color: greenyellow;
+    width: 100%;
+    height: 100%;
 }
 
-aside{
-    display: grid;
-    grid-template-rows: 55vh;
-    grid-template-columns: 50% 50%;
+.botones{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.botones ul{
+    width: 100%;
+    display: inline-flex;
+    justify-content: space-around;
+    height: 100%;
+}
+
+.botones li{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: center;
+}
+
+.botones a{
+    text-decoration: none;
+    border: none;
+    outline: none;
+    font-family: 'Rubik', sans-serif;
+    color: white;
+}
+
+.botones li:hover{
+    background-color: #091087;
+    background-color: #1D418B;
 }
 
 .mainImage{
     position: absolute;
     width: 30%;
     height: 60%;
-    background-color: lightgreen;
+    background-color: white;
     border-radius: 50%;
+    top: 13%;
+    left: 35%;
+    background-image: url(../../img/nbaBallon.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+section{
+    display: grid;
+    grid-template-rows: 55vh 30vh;
+    grid-template-columns: 50% 50%;
 }
 
 .firstView{
     grid-column: 1 / 2;
-    background-color: hotpink;
+    background-color: #1D418B;
 }
 
 .secondView{
     grid-column: 2 / 3;
-    background-color: indigo;
+    background-color: #C90E2F;
+}
+
+.description{
+    grid-column: 1 / 3;
+    background-image: url(../../img/fondoBasket2.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: top;
+}
+
+.teams{
+    display: grid;
+    grid-template-rows: 15vh 5vh 21vh 5vh 21vh 5vh 21vh 5vh 21vh 5vh 21vh 5vh 21vh 5vh;
+    grid-template-columns: 3% 30% 2% 30% 2% 30% 3%;
+    grid-template-columns: 4% 16% 3% 16% 3% 16% 3% 16% 3% 16% 4%;
+}
+
+.teams>div{
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.fondoTeams{
+    grid-column: 1 / 12;
+    grid-row: 1 / 19;
+    background-image: url(../../img/fondoBasket9.jpg);
+    background-size: 100%;
+}
+
+.titleTeams{
+    grid-column: 1 / 12;
+    grid-row: 1 / 2;
+    background-color: #221f1f;
+    opacity: 0.95;
+}
+
+.atlantaHawks{
+    grid-column: 2 / 3;
+    grid-row: 3 / 4;
+    background-image: url(../../img/teams/atlantaHawks.png);
+}
+
+.bostonCeltics{
+    grid-column: 4 / 5;
+    grid-row: 3 / 4;
+    background-image: url(../../img/teams/bostonCeltics.png);
+}
+
+.brooklynNets{
+    grid-column: 6 / 7;
+    grid-row: 3 / 4;
+    background-image: url(../../img/teams/brooklynNets.png);
+}
+
+.charlotteHornets{
+    grid-column: 8 / 9;
+    grid-row: 3 / 4;
+    background-image: url(../../img/teams/charlotteHornets.png);
+}
+
+.chicagoBulls{
+    grid-column: 10 / 11;
+    grid-row: 3 / 4;
+    background-image: url(../../img/teams/chicagoBulls.png);
+}
+
+.clevelandCavaliers{
+    grid-column: 2 / 3;
+    grid-row: 5 / 6;
+    background-image: url(../../img/teams/clevelandCavaliers.png);
+}
+
+.dallasMavericks{
+    grid-column: 4 / 5;
+    grid-row: 5 / 6;
+    background-image: url(../../img/teams/dallasMavericks.png);
+}
+
+.denverNuggets{
+    grid-column: 6 / 7;
+    grid-row: 5 / 6;
+    background-image: url(../../img/teams/denverNuggets.png);
+}
+
+.detroitPistons{
+    grid-column: 8 / 9;
+    grid-row: 5 / 6;
+    background-image: url(../../img/teams/detroitPistons.png);
+}
+
+.goldenStateWarriors{
+    grid-column: 10 / 11;
+    grid-row: 5 / 6;
+    background-image: url(../../img/teams/goldenStateWarriors.png);
+}
+
+.houstonRockets{
+    grid-column: 2 / 3;
+    grid-row: 7 / 8;
+    background-image: url(../../img/teams/houstonRockets.png);
+}
+
+.indianaPacers{
+    grid-column: 4 / 5;
+    grid-row: 7 / 8;
+    background-image: url(../../img/teams/indianaPacers.png);
+}
+
+.losAngelesClippers{
+    grid-column: 6 / 7;
+    grid-row: 7 / 8;
+    background-image: url(../../img/teams/losAngelesClippers.png);
+}
+
+.losAngelesLakers{
+    grid-column: 8 / 9;
+    grid-row: 7 / 8;
+    background-image: url(../../img/teams/losAngelesLakers.png);
+}
+
+.memphisGrizzlies{
+    grid-column: 10 / 11;
+    grid-row: 7 / 8;
+    background-image: url(../../img/teams/memphisGrizzlies.png);
+}
+
+.miamiHeat{
+    grid-column: 2 / 3;
+    grid-row: 9 / 10;
+    background-image: url(../../img/teams/miamiHeat.png);
+}
+
+.milwaukeeBucks{
+    grid-column: 4 / 5;
+    grid-row: 9 / 10;
+    background-image: url(../../img/teams/milwaukeeBucks.png);
+}
+
+.minnesotaTimberwolves{
+    grid-column: 6 / 7;
+    grid-row: 9 / 10;
+    background-image: url(../../img/teams/minnesotaTimberwolves.png);
+}
+
+.newOrleansPelicans{
+    grid-column: 8 / 9;
+    grid-row: 9 / 10;
+    background-image: url(../../img/teams/newOrleansPelicans.png);
+}
+
+.newYorkKnicks{
+    grid-column: 10 / 11;
+    grid-row: 9 / 10;
+    background-image: url(../../img/teams/newYorkKnicks.png);
+}
+
+.oklahomaCityThunder{
+    grid-column: 2 / 3;
+    grid-row: 11 / 12;
+    background-image: url(../../img/teams/oklahomaThunder.png);
+}
+
+.orlandoMagic{
+    grid-column: 4 / 5;
+    grid-row: 11 / 12;
+    background-image: url(../../img/teams/orlandoMagic.png);
+}
+
+.philadelphia76ers{
+    grid-column: 6 / 7;
+    grid-row: 11 / 12;
+    background-image: url(../../img/teams/philadelphia76ers.png);
+}
+
+.phoenixSuns{
+    grid-column: 8 / 9;
+    grid-row: 11 / 12;
+    background-image: url(../../img/teams/phoenixSuns3.png);
+}
+
+.portlandTrailBlazers{
+    grid-column: 10 / 11;
+    grid-row: 11 / 12;
+    background-image: url(../../img/teams/portlandTrailBlazers.png);
+}
+
+.sacramentoKings{
+    grid-column: 2 / 3;
+    grid-row: 13 / 14;
+    background-image: url(../../img/teams/sacramentoKings.png);
+}
+
+.sanAntonioSpurs{
+    grid-column: 4 / 5;
+    grid-row: 13 / 14;
+    background-image: url(../../img/teams/sanAntonioSpurs.png);
+}
+
+.torontoRaptors{
+    grid-column: 6 / 7;
+    grid-row: 13 / 14;
+    background-image: url(../../img/teams/torontoRaptors.png);
+}
+
+.utahJazz{
+    grid-column: 8 / 9;
+    grid-row: 13 / 14;
+    background-image: url(../../img/teams/utahJazz.png);
+}
+
+.washingtonWizards{
+    grid-column: 10 / 11;
+    grid-row: 13 / 14;
+    background-image: url(../../img/teams/washingtonWizards.png);
+}
+
+footer{
+    display: grid;
+    grid-template-columns: 100vh;
+    grid-template-rows: 10vh;
+    background-color: #221f1f;
 }
