--- a/css/inicio/mainTeams.css
+++ b/css/inicio/mainTeams.css
@@ -1,235 +1,541 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;  
-}
-
-.title{
-    display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: 15vh;
+    box-sizing: border-box;
 }
 
 .teams{
     display: grid;
-    grid-template-rows: 5vh 21vh 5vh 21vh 5vh 21vh 5vh 21vh 5vh 21vh 5vh 21vh 5vh;
-    grid-template-columns: 3% 30% 2% 30% 2% 30% 3%;
     grid-template-columns: 4% 16% 3% 16% 3% 16% 3% 16% 3% 16% 4%;
+    grid-template-rows: 5vh 21vh 5vh 21vh 5vh 21vh 5vh 21vh 5vh 21vh 5vh 21vh 5vh;
+    background-color: transparent;
+    perspective: 2000px;
+    background-image: url(../../img/fondoBasket9.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
-.teams div{
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    transition: transform 0.8s;
+.innerTeam{
+    transition: transform 0.6s;
     transform-style: preserve-3d;
 }
 
-.fondoTeams{
-    grid-column: 1 / 12;
-    grid-row: 1 / 19;
-    background-image: url(../../img/fondoBasket9.jpg);
-    background-size: 100%;
-}
-
-.titleTeams{
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
-    background-color: #221f1f;
-    opacity: 0.95;
-}
-
-.team1{
-    grid-column: 2 / 3;
-    grid-row: 2 / 3;
-    display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: 100%;
+.innerTeam:hover{
     transform: rotateY(180deg);
 }
 
-.atlantaHawks{
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
-    background-image: url(../../img/teams/atlantaHawks.png);
+.newTeam, .newTeam img{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    border: 1px solid white;
 }
 
-.atlantaHawks:hover{
+.oldTeam{
+    width: 100%;
+    height: 100%;
+    position: relative;
     transform: rotateY(180deg);
-    background-image: url(../../img/oldTeams/hawksOld.png);
-    background-size: contain;
-    background-repeat: no-repeat;
 }
 
-.bostonCeltics{
+.innerTeam.t1{
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+}
+
+.oldTeam.t1 img{
+    position: relative;
+    width: 65%;
+    height: 100%;
+    left: 17.5%;
+}
+
+.oldTeam.t1{
+    background-color: black;
+}
+
+.innerTeam.t2{
     grid-column: 4 / 5;
     grid-row: 2 / 3;
-    background-image: url(../../img/teams/bostonCeltics.png);
 }
 
-.brooklynNets{
+.oldTeam.t2 img{
+    position: relative;
+    width: 55%;
+    height: 95%;
+    left: 22.5%;
+    top: 2.5%
+}
+
+.oldTeam.t2{
+    background-color: #ffffbf;
+}
+
+.innerTeam.t3{
     grid-column: 6 / 7;
     grid-row: 2 / 3;
-    background-image: url(../../img/teams/brooklynNets.png);
 }
 
-.charlotteHornets{
+.oldTeam.t3 img{
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.oldTeam.t3{
+    background-color: black;
+}
+
+.innerTeam.t4{
     grid-column: 8 / 9;
     grid-row: 2 / 3;
-    background-image: url(../../img/teams/charlotteHornets.png);
 }
 
-.chicagoBulls{
+.oldTeam.t4 img{
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.oldTeam.t4{
+    background-color: black;
+}
+
+.innerTeam.t5{
     grid-column: 10 / 11;
     grid-row: 2 / 3;
-    background-image: url(../../img/teams/chicagoBulls.png);
 }
 
-.clevelandCavaliers{
+.oldTeam.t5 img{
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.oldTeam.t5{
+    background-color: white;
+}
+
+.innerTeam.t6{
     grid-column: 2 / 3;
     grid-row: 4 / 5;
-    background-image: url(../../img/teams/clevelandCavaliers.png);
 }
 
-.dallasMavericks{
+.oldTeam.t6 img{
+    position: relative;
+    width: 70%;
+    height: 90%;
+    top: 5%;
+    left: 16%;
+}
+
+.oldTeam.t6{
+    background-color: white;
+}
+
+.innerTeam.t7{
     grid-column: 4 / 5;
     grid-row: 4 / 5;
-    background-image: url(../../img/teams/dallasMavericks.png);
 }
 
-.denverNuggets{
+.oldTeam.t7 img{
+    position: relative;
+    width: 90%;
+    height: 70%;
+    top: 12.5%;
+    left: 5%;
+}
+
+.oldTeam.t7{
+    background-color: white;
+}
+
+.innerTeam.t8{
     grid-column: 6 / 7;
     grid-row: 4 / 5;
-    background-image: url(../../img/teams/denverNuggets.png);
 }
 
-.detroitPistons{
+.oldTeam.t8 img{
+    position: relative;
+    width: 60%;
+    height: 90%;
+    top: 5%;
+    left: 20%;
+}
+
+.oldTeam.t8{
+    background-color: #F6E91F;
+}
+
+.innerTeam.t9{
     grid-column: 8 / 9;
     grid-row: 4 / 5;
-    background-image: url(../../img/teams/detroitPistons.png);
 }
 
-.goldenStateWarriors{
+.oldTeam.t9 img{
+    position: relative;
+    width: 60%;
+    height: 90%;
+    top: 5%;
+    left: 20%;
+}
+
+.oldTeam.t9{
+    background-color: white;
+}
+
+.innerTeam.t10{
     grid-column: 10 / 11;
     grid-row: 4 / 5;
-    background-image: url(../../img/teams/goldenStateWarriors.png);
 }
 
-.houstonRockets{
+.oldTeam.t10 img{
+    position: relative;
+    width: 60%;
+    height: 90%;
+    top: 5%;
+    left: 20%;
+}
+
+.oldTeam.t10{
+    background-color: white;
+}
+
+.innerTeam.t11{
     grid-column: 2 / 3;
     grid-row: 6 / 7;
-    background-image: url(../../img/teams/houstonRockets.png);
 }
 
-.indianaPacers{
+.oldTeam.t11 img{
+    position: relative;
+    width: 60%;
+    height: 90%;
+    top: 5%;
+    left: 20%;
+}
+
+.oldTeam.t11{
+    background-color: white;
+}
+
+.innerTeam.t12{
     grid-column: 4 / 5;
     grid-row: 6 / 7;
-    background-image: url(../../img/teams/indianaPacers.png);
 }
 
-.losAngelesClippers{
+.oldTeam.t12 img{
+    position: relative;
+    width: 55%;
+    height: 90%;
+    top: 5%;
+    left: 22.5%;
+}
+
+.oldTeam.t12{
+    background-color: white;
+}
+
+.innerTeam.t13{
     grid-column: 6 / 7;
     grid-row: 6 / 7;
-    background-image: url(../../img/teams/losAngelesClippers.png);
 }
 
-.losAngelesLakers{
+.oldTeam.t13 img{
+    position: relative;
+    width: 50%;
+    height: 90%;
+    top: 5%;
+    left: 25%;
+}
+
+.oldTeam.t13{
+    background-color: white;
+}
+
+.innerTeam.t14{
     grid-column: 8 / 9;
     grid-row: 6 / 7;
-    background-image: url(../../img/teams/losAngelesLakers.png);
 }
 
-.memphisGrizzlies{
+.oldTeam.t14 img{
+    position: relative;
+    width: 60%;
+    height: 90%;
+    top: 5%;
+    left: 20%;
+}
+
+.oldTeam.t14{
+    background-color: white;
+}
+
+.innerTeam.t15{
     grid-column: 10 / 11;
     grid-row: 6 / 7;
-    background-image: url(../../img/teams/memphisGrizzlies.png);
 }
 
-.miamiHeat{
+.oldTeam.t15 img{
+    position: relative;
+    width: 80%;
+    height: 90%;
+    top: 5%;
+    left: 10.5%;
+}
+
+.oldTeam.t15{
+    background-color: white;
+}
+
+.innerTeam.t16{
     grid-column: 2 / 3;
     grid-row: 8 / 9;
-    background-image: url(../../img/teams/miamiHeat.png);
 }
 
-.milwaukeeBucks{
+.oldTeam.t16 img{
+    position: relative;
+    width: 50%;
+    height: 90%;
+    top: 5%;
+    left: 25%;
+}
+
+.oldTeam.t16{
+    background-color: white;
+}
+
+.innerTeam.t17{
     grid-column: 4 / 5;
     grid-row: 8 / 9;
-    background-image: url(../../img/teams/milwaukeeBucks.png);
 }
 
-.minnesotaTimberwolves{
+.oldTeam.t17 img{
+    position: relative;
+    width: 55%;
+    height: 90%;
+    top: 5%;
+    left: 22.5%;
+}
+
+.oldTeam.t17{
+    background-color: white;
+}
+
+.innerTeam.t18{
     grid-column: 6 / 7;
     grid-row: 8 / 9;
-    background-image: url(../../img/teams/minnesotaTimberwolves.png);
 }
 
-.newOrleansPelicans{
+.oldTeam.t18 img{
+    position: relative;
+    width: 45%;
+    height: 90%;
+    top: 5%;
+    left: 27.5%;
+}
+
+.oldTeam.t18{
+    background-color: white;
+}
+
+.innerTeam.t19{
     grid-column: 8 / 9;
     grid-row: 8 / 9;
-    background-image: url(../../img/teams/newOrleansPelicans.png);
 }
 
-.newYorkKnicks{
+.oldTeam.t19 img{
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.oldTeam.t19{
+    background-color: white;
+}
+
+.innerTeam.t20{
     grid-column: 10 / 11;
     grid-row: 8 / 9;
-    background-image: url(../../img/teams/newYorkKnicks.png);
 }
 
-.oklahomaCityThunder{
+.oldTeam.t20 img{
+    position: relative;
+    width: 80%;
+    height: 90%;
+    top: 5%;
+    left: 10%;
+}
+
+.oldTeam.t20{
+    background-color: white;
+}
+
+.innerTeam.t21{
     grid-column: 2 / 3;
     grid-row: 10 / 11;
-    background-image: url(../../img/teams/oklahomaThunder.png);
 }
 
-.orlandoMagic{
+.oldTeam.t21 img{
+    position: relative;
+    width: 60%;
+    height: 90%;
+    top: 5%;
+    left: 20%;
+}
+
+.oldTeam.t21{
+    background-color: white;
+}
+
+.innerTeam.t22{
     grid-column: 4 / 5;
     grid-row: 10 / 11;
-    background-image: url(../../img/teams/orlandoMagic.png);
 }
 
-.philadelphia76ers{
+.oldTeam.t22 img{
+    position: relative;
+    width: 80%;
+    height: 50%;
+    top: 28%;
+    left: 10%;
+}
+
+.oldTeam.t22{
+    background-color: white;
+}
+
+.innerTeam.t23{
     grid-column: 6 / 7;
     grid-row: 10 / 11;
-    background-image: url(../../img/teams/philadelphia76ers.png);
 }
 
-.phoenixSuns{
+.oldTeam.t23 img{
+    position: relative;
+    width: 60%;
+    height: 90%;
+    top: 5%;
+    left: 20%;
+}
+
+.oldTeam.t23{
+    background-color: white;
+}
+
+.innerTeam.t24{
     grid-column: 8 / 9;
     grid-row: 10 / 11;
-    background-image: url(../../img/teams/phoenixSuns3.png);
 }
 
-.portlandTrailBlazers{
+.oldTeam.t24 img{
+    position: relative;
+    width: 30%;
+    height: 80%;
+    top: 10%;
+    left: 35%;
+}
+
+.oldTeam.t24{
+    background-color: white;
+}
+
+.innerTeam.t25{
     grid-column: 10 / 11;
     grid-row: 10 / 11;
-    background-image: url(../../img/teams/portlandTrailBlazers.png);
 }
 
-.sacramentoKings{
+.oldTeam.t25 img{
+    position: relative;
+    width: 50%;
+    height: 90%;
+    top: 5%;
+    left: 25%;
+}
+
+.oldTeam.t25{
+    background-color: white;
+}
+
+.innerTeam.t26{
     grid-column: 2 / 3;
     grid-row: 12 / 13;
-    background-image: url(../../img/teams/sacramentoKings.png);
 }
 
-.sanAntonioSpurs{
+.oldTeam.t26 img{
+    position: relative;
+    width: 60%;
+    height: 90%;
+    top: 5%;
+    left: 22%;
+}
+
+.oldTeam.t26{
+    background-color: white;
+}
+
+.innerTeam.t27{
     grid-column: 4 / 5;
     grid-row: 12 / 13;
-    background-image: url(../../img/teams/sanAntonioSpurs.png);
 }
 
-.torontoRaptors{
+.oldTeam.t27 img{
+    position: relative;
+    width: 85%;
+    height: 90%;
+    top: 5%;
+    left: 8%;
+}
+
+.oldTeam.t27{
+    background-color: white;
+}
+
+.innerTeam.t28{
     grid-column: 6 / 7;
     grid-row: 12 / 13;
-    background-image: url(../../img/teams/torontoRaptors.png);
 }
 
-.utahJazz{
+.oldTeam.t28 img{
+    position: relative;
+    width: 70%;
+    height: 90%;
+    top: 5%;
+    left: 20%;
+}
+
+.oldTeam.t28{
+    background-color: white;
+}
+
+.innerTeam.t29{
     grid-column: 8 / 9;
     grid-row: 12 / 13;
-    background-image: url(../../img/teams/utahJazz.png);
 }
 
-.washingtonWizards{
+.oldTeam.t29 img{
+    position: relative;
+    width: 90%;
+    height: 65%;
+    top: 17.5%;
+    left: 5%;
+}
+
+.oldTeam.t29{
+    background-color: white;
+}
+
+.innerTeam.t30{
     grid-column: 10 / 11;
     grid-row: 12 / 13;
-    background-image: url(../../img/teams/washingtonWizards.png);
 }
+
+.oldTeam.t30 img{
+    position: relative;
+    width: 60%;
+    height: 90%;
+    top: 5%;
+    left: 20%;
+}
+
+.oldTeam.t30{
+    background-color: white;
+}
+
