Cambios en los iconos de redes sociales

--- a/css/inicio/footer.css
+++ b/css/inicio/footer.css
@@ -21,6 +21,15 @@
 
 .copyright>p{
     font-family: 'Rubik', sans-serif;
+    margin-top: 5px;
+}
+
+.copyright p{
+    color: white;
+}
+
+.copyright p:hover{
+    color: #C90E2F;
 }
 
 .socialMedia{
@@ -31,8 +40,25 @@
     align-items: center;
 }
 
-.socialMedia img{
-    width: 2vw;
-    height: 4vh;
-    margin: 0px 10px;
+a{
+    text-decoration: none;
+    color: white;
+}
+
+a:hover{
+    color: #1D418B;
+}
+
+.socialMedia span{
+    font-size: 150%;
+    margin: 10px 10px 0px 10px;
+    color: white;
+}
+
+.socialMedia>a>.icon-twitter:hover, .socialMedia>a>.icon-linkedin2:hover{
+    color: #1D418B;
+}
+
+.socialMedia>a>.icon-facebook2:hover, .socialMedia>a>.icon-instagram:hover{
+    color: #C90E2F;
 }
