--- a/css/inicio/headerNav.css
+++ b/css/inicio/headerNav.css
@@ -15,57 +15,67 @@ header{
     background-color: #221f1f;
 }
 
-.logo{
-    grid-column: 1 / 2;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+    .logo{
+        grid-column: 1 / 2;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 
-.logo p{
-    font-family: 'Rubik', sans-serif;
-    color: white;
-}
+        .logo p{
+            font-family: 'Rubik', sans-serif;
+            color: white;
+        }
 
-nav{
-    grid-column: 2 / 3;
-    width: 100%;
-    height: 100%;
-}
+    nav{
+        grid-column: 2 / 3;
+        width: 100%;
+        height: 100%;
+    }
 
-.botones{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+        .botones{
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
 
-.botones ul{
-    width: 100%;
-    display: inline-flex;
-    justify-content: space-around;
-    height: 100%;
-}
+            .botones ul{
+                width: 100%;
+                display: inline-flex;
+                justify-content: space-around;
+                height: 100%;
+            }
 
-.botones li{
-    display: flex;
-    align-items: center;
-    width: 100%;
-    justify-content: center;
-}
+                .botones li{
+                    display: flex;
+                    align-items: center;
+                    width: 100%;
+                    justify-content: center;
+                }
 
-.botones a{
-    text-decoration: none;
-    border: none;
-    outline: none;
-    font-family: 'Rubik', sans-serif;
-    color: white;
-}
+                .botones li:hover{
+                    background-color: #091087;
+                    background-color: #1D418B;
+                }
 
-.botones li:hover{
-    background-color: #091087;
-    background-color: #1D418B;
-}
+                    .botones a{
+                        text-decoration: none;
+                        border: none;
+                        outline: none;
+                        font-family: 'Rubik', sans-serif;
+                        color: white;
+                        width: 100%;
+                        height: 100%;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                    }
+
+                    .botones a:hover{
+                        color: white;
+                    }
+
