--- a/css/inicio/section.css
+++ b/css/inicio/section.css
@@ -71,9 +71,13 @@
 .firstText{
     grid-column: 2 / 3;
     grid-row: 2 / 3;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.4);
     width: 100%;
-    height: 100%;
+    height: auto;
+    border: 1px solid #23282E;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .firstText p{
@@ -81,4 +85,5 @@
     text-align: justify;
     color: #221f1f;
     line-height: 19pt;
+    font-size: 1em;
 }
