--- a/css/masInfo/headerNav.css
+++ b/css/masInfo/headerNav.css
@@ -21,6 +21,7 @@ header{
         .logo a{
             display: flex;
             align-items: center;
+            text-decoration: none;
         }
 
         .logo img{
