--- a/css/masInfo/main.css
+++ b/css/masInfo/main.css
@@ -33,12 +33,17 @@
 .titulo i{
     font-size: 3.2rem;
     margin: 0rem 2rem;
+    color: #221F1F;
 }
 
 .titulo h1{
     font-size: 3.5rem;
     font-family: 'Rubik', sans-serif;
     font-weight: 300;
+    background-size: 100%;
+    background: -webkit-linear-gradient(45deg, #1D418B, #C90E2F);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .formulario{
@@ -48,12 +53,18 @@
     margin: 0rem 2rem;
     background-color: rgb(202, 19, 49, 0.4);
     z-index: 1;
-    border: 1px solid black;
+    border: 1px solid #221F1F;
 }
 
 @keyframes filtro{
 
     0%{filter: none;}
-    50%{filter: saturate(75%);}
+    50%{filter: sepia(60%);}
     100%{filter: none;}
+}
+
+@keyframes gradiente{
+    0%{background-position: 0% 50%;}
+    50%{background-position: 100% 50%;}
+    100%{background-position: 0% 50%;}
 }
