--- a/css/masInfo/main.css
+++ b/css/masInfo/main.css
@@ -6,7 +6,7 @@
 
 .contenedor{
     display: grid;
-    grid-template-rows: 25vh 95vh 5vh;
+    grid-template-rows: 25vh 80% 5vh;
     grid-template-columns: 15% 70% 15%;
 }
 
@@ -19,6 +19,11 @@
     z-index: 0;
 
     animation: filtro 8s linear infinite;
+}
+
+form{
+    width: 100%;
+    height: 100%;
 }
 
 .titulo{
