--- a/css/inicio/headerNav.css
+++ b/css/inicio/headerNav.css
@@ -24,7 +24,7 @@ header{
         }
 
         .logo img{
-            width: 4.5rem;
+            width: 4.7rem;
             height: 4.5rem;
             margin: 0rem 1.5rem 0rem 2rem;
         }
@@ -83,7 +83,7 @@ header{
                         display: flex;
                         justify-content: center;
                         align-items: center;
-                        font-size: 1em;
+                        font-size: 1.2rem;
                     }
 
                     .botones a:hover{
