--- a/css/masInfo/headerNav.css
+++ b/css/masInfo/headerNav.css
@@ -25,7 +25,7 @@ header{
         }
 
         .logo img{
-            width: 4.5rem;
+            width: 4.7rem;
             height: 4.5rem;
             margin: 0rem 1.5rem 0rem 2rem;
         }
@@ -38,7 +38,7 @@ header{
         }
 
         .logo p:hover{
-            color: #1D418B;
+            color: #C90E2F;
         }
 
     nav{
@@ -84,7 +84,7 @@ header{
                         display: flex;
                         justify-content: center;
                         align-items: center;
-                        font-size: 1em;
+                        font-size: 1.2rem;
                     }
 
                     .botones a:hover{
