--- a/css/masInfo/mainInfo.css
+++ b/css/masInfo/mainInfo.css
@@ -6,7 +6,7 @@
 
 .contenedor{
     display: grid;
-    grid-template-rows: 25vh 95vh 5vh;
+    grid-template-rows: 25vh auto 5vh;
     grid-template-columns: 15% 70% 15%;
 }
 
@@ -19,11 +19,6 @@
     z-index: 0;
 
     animation: filtro 8s linear infinite;
-}
-
-form{
-    width: 100%;
-    height: 100%;
 }
 
 .titulo{
@@ -155,6 +150,7 @@ textarea{
 
 .envio, .limpieza{
     width: 25%;
+    margin-bottom: 1.5rem;
 }
 
 @keyframes filtro{
