--- a/css/kobeGigi/mainLakers.css
+++ b/css/kobeGigi/mainLakers.css
@@ -4,7 +4,66 @@
     box-sizing: border-box;  
 }
 
-video{
-    width: 100%;
+main{
+    background-color: black;
 }
 
+.kobe{
+    display: grid;
+    grid-template-columns: 3% 63% 31% 3%;
+    grid-template-rows: 6vh 73vh 6vh;
+}
+
+.fondoKobe{
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+    display: flex;
+    align-items: center;
+    border: 2px solid #fdb927;
+}
+
+.fondoKobe video:hover{
+    opacity: 0.2;
+}
+
+video{
+    width: 100%;
+    height: 100%;
+}
+
+.kobeAndGigi{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 30vh;
+}
+
+.gigi{
+    display: grid;
+    grid-template-columns: 3% 31% 63% 3%;
+    grid-template-rows: 11vh 73vh 6vh;
+}
+
+.fondoGigi{
+    grid-column: 3 / 4;
+    grid-row:  2 / 3;
+    border: 2px solid white;
+}
+
+.fotosKobe{
+    grid-column: 3 / 4;
+    grid-row: 2 / 3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.fotoN24{
+    width: 80%;
+    height: 40%;
+    border-radius: 50%;
+    background-color: white;
+}
+
+.fotosKobe img{
+    width: 100%;
+}
