--- a/css/kobeGigi/mainLakers.css
+++ b/css/kobeGigi/mainLakers.css
@@ -10,8 +10,8 @@ main{
 
 .kobe{
     display: grid;
-    grid-template-columns: 3% 63% 31% 3%;
-    grid-template-rows: 6vh auto 6vh;
+    grid-template-columns: 3% 60% 3% 31% 3%;
+    grid-template-rows: 6vh 69vh 6vh;
 }
 
 .fondoKobe{
@@ -47,21 +47,36 @@ video{
     grid-row:  2 / 3;
 }
 
-.fotosKobe{
-    grid-column: 3 / 4;
+.sliderKobe{
+    grid-column: 4 / 5;
     grid-row: 2 / 3;
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
+    
 }
 
-.fotoN24{
-    width: 80%;
-    height: 40%;
-    border-radius: 50%;
-    background-color: white;
-}
-
-.fotosKobe img{
+.sliderKobe ul{
+    display: flex;
     width: 100%;
+    height: 101%;
+
+    
+}
+
+.sliderKobe li{
+    width: 100%;
+    list-style: none;
+}
+
+.sliderKobe img{
+    animation: cambioKobe 5s infinite alternate linear;
+}
+
+@keyframes cambioKobe{
+	0% {margin-left: 0;}
+    25% {margin-left: 0;}
+	75% {margin-left: -130%;}
+	100% {margin-left: -130%;}
 }
