--- a/css/kobeGigi/mainLakers.css
+++ b/css/kobeGigi/mainLakers.css
@@ -72,11 +72,18 @@ video{
 
 .sliderKobe img{
     animation: cambioKobe 5s infinite alternate linear;
+    height: 100%;
+    width: 31vw;
+}
+
+.sliderKobe p{
+    color: white;
+    z-index: 1;
 }
 
 @keyframes cambioKobe{
 	0% {margin-left: 0;}
     25% {margin-left: 0;}
-	75% {margin-left: -130%;}
-	100% {margin-left: -130%;}
+	75% {margin-left: -100%;}
+	100% {margin-left: -100%;}
 }
