--- a/css/inicio/mainTeams.css
+++ b/css/inicio/mainTeams.css
@@ -5,7 +5,7 @@
 }
 
 main{
-    background-image: url(../../img/fondoBasket9.jpg);
+    background-image: url(../../img/fondosWeb/fondoBasket9.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
