--- a/css/inicio/section.css
+++ b/css/inicio/section.css
@@ -11,7 +11,7 @@
     border-radius: 50%;
     top: 13%;
     left: 35%;
-    background-image: url(../../img/nbaBallon.jpg);
+    background-image: url(../../img/fondosWeb/nbaBallon.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     z-index: 1;
@@ -59,7 +59,7 @@
 
 .description{
     grid-column: 1 / 3;
-    background-image: url(../../img/fondoBasket2.jpg);
+    background-image: url(../../img/fondosWeb/fondoBasket2.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: top;
