--- a/css/kobeGigi/mainLakers.css
+++ b/css/kobeGigi/mainLakers.css
@@ -8,80 +8,138 @@ main{
     background-color: black;
 }
 
-.kobe{
-    display: grid;
-    grid-template-columns: 3% 60% 3% 31% 3%;
-    grid-template-rows: 6vh 69vh 6vh;
-}
+    .kobe{
+        display: grid;
+        grid-template-columns: 3% 60% 3% 31% 3%;
+        grid-template-rows: 6vh 69vh 6vh;
+    }
 
-.fondoKobe{
-    grid-column: 2 / 3;
-    grid-row: 2 / 3;
-    display: flex;
-    align-items: center;
-}
+        .fondoKobe{
+            grid-column: 2 / 3;
+            grid-row: 2 / 3;
+            display: flex;
+            align-items: center;
+        }
 
-.fondoKobe video:hover{
-    opacity: 0.4;
-}
+        .fondoKobe video:hover{
+            opacity: 0.5;
+        }
 
-video{
-    width: 100%;
-    height: 100%;
-}
+            video{
+                width: 100%;
+                height: 100%;
+            }
+        
+        .sliderKobe{
+            grid-column: 4 / 5;
+            grid-row: 2 / 3;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            overflow: hidden;
+        }
 
-.kobeAndGigi{
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 30vh;
-}
+            .sliderKobe ul{
+                display: flex;
+                width: 100%;
+                height: 110%;
+            }
 
-.gigi{
-    display: grid;
-    grid-template-columns: 3% 31% 63% 3%;
-    grid-template-rows: 11vh auto 6vh;
-}
+                .sliderKobe li{
+                    width: 100%;
+                    list-style: none;
+                }
 
-.fondoGigi{
-    grid-column: 3 / 4;
-    grid-row:  2 / 3;
-}
+                    .sliderKobe img{
+                        animation: cambioKobe 10s infinite alternate linear;
+                        height: 100%;
+                        width: 31vw;
+                    }
 
-.sliderKobe{
-    grid-column: 4 / 5;
-    grid-row: 2 / 3;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    
-}
+    article{
+        display: grid;
+        grid-template-columns: 3% 42% 5% 5% 42% 3%;
+        grid-template-rows: 50vh;
+    }
 
-.sliderKobe ul{
-    display: flex;
-    width: 100%;
-    height: 101%;
-}
+        .kobeAndGigi{
+            width: 100%;
+            height: 100%;
+            background-color: khaki;
+            grid-column: 2 / 6;
+            grid-row: 1 / 2;
+        }
 
-.sliderKobe li{
-    width: 100%;
-    list-style: none;
-}
+        .kobeAndGigi input{
+            opacity: 0.5;
+            width: 0%;
+            height: 100%;
+        }
 
-.sliderKobe img{
-    animation: cambioKobe 5s infinite alternate linear;
-    height: 100%;
-    width: 31vw;
-}
+        .slider{
+            position: relative;
+            cursor: pointer;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #ccc;
+            transition: 0.4s;
+        }
 
-.sliderKobe p{
-    color: white;
-    z-index: 1;
-}
+        .slider::before{
+            position: relative;
+            content: "";
+            width: 1rem;
+            height: 1rem;
+            left: 4px;
+            bottom: 4px;
+            background-color: white;
+            transition: 0.4s;
+        }
 
-@keyframes cambioKobe{
+    .gigi{
+        display: grid;
+        grid-template-columns: 3% 31% 3% 60% 3%;
+        grid-template-rows: 6vh 69vh 6vh;
+    }
+
+        .fondoGigi{
+            grid-column: 4 / 5;
+            grid-row:  2 / 3;
+        }
+
+        .fondoGigi video:hover{
+            opacity: 0.5;
+        }
+
+        .sliderGigi{
+            grid-column: 2 / 3;
+            grid-row: 2 / 3;
+            overflow: hidden;
+        }
+
+            .sliderGigi ul{
+                display: flex;
+                width: 100%;
+                height: 125%;
+            }
+
+                .sliderGigi li{
+                    width: 100%;
+                    list-style: none;
+                }
+
+                    .sliderGigi img{
+                        animation: cambioKobe 10s infinite alternate linear;
+                        height: 100%;
+                        width: 31vw;
+                    }
+
+@keyframes cambioKobeGigi{
 	0% {margin-left: 0;}
     25% {margin-left: 0;}
 	75% {margin-left: -100%;}
 	100% {margin-left: -100%;}
 }
+
