--- a/css/kobeGigi/mainLakers.css
+++ b/css/kobeGigi/mainLakers.css
@@ -37,6 +37,7 @@ main{
             justify-content: center;
             align-items: center;
             overflow: hidden;
+            border: 0.3rem solid #552583;
         }
 
             .sliderKobe ul{
@@ -51,52 +52,73 @@ main{
                 }
 
                     .sliderKobe img{
-                        animation: cambioKobe 10s infinite alternate linear;
+                        animation: cambioKobeGigi 10s infinite alternate linear;
                         height: 100%;
                         width: 31vw;
                     }
 
     article{
         display: grid;
-        grid-template-columns: 3% 42% 5% 5% 42% 3%;
+        grid-template-columns: 3% 94% 3%;
         grid-template-rows: 50vh;
     }
 
         .kobeAndGigi{
-            width: 100%;
-            height: 100%;
-            background-color: khaki;
-            grid-column: 2 / 6;
+            background-color: #fdb927;
+            grid-column: 2 / 3;
             grid-row: 1 / 2;
+            display: grid;
+            grid-template-columns: 1% 44% 5% 5% 44% 1%;
+            grid-template-rows: 3% 94% 3%;
         }
 
-        .kobeAndGigi input{
-            opacity: 0.5;
-            width: 0%;
-            height: 100%;
-        }
+            .gigiBox{
+                background-color: white;
+                grid-column: 2 / 3;
+                grid-row: 2 / 3;
+                padding: 0rem 1rem 0rem 1rem;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                text-align: justify;
+                border: 1px solid black;
+            }
 
-        .slider{
-            position: relative;
-            cursor: pointer;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background-color: #ccc;
-            transition: 0.4s;
-        }
+            .gigiBox h2{
+                text-align: center;
+                font-family: 'Rubik', sans-serif;
+                margin-top: 0.2rem;
+            }
 
-        .slider::before{
-            position: relative;
-            content: "";
-            width: 1rem;
-            height: 1rem;
-            left: 4px;
-            bottom: 4px;
-            background-color: white;
-            transition: 0.4s;
-        }
+            .gigiBox p{
+                font-family: 'Rubik', sans-serif;
+                line-height: 2rem;
+                margin-top: 0.2rem;
+            }
+
+            .and{
+                grid-column: 3 / 5;
+                grid-row: 2 / 3;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                z-index: 1;
+            }
+
+                .and p{
+                    color: #552583;
+                    font-family: 'Rubik', sans-serif;
+                    font-size: 10rem;
+                    -webkit-text-stroke: 0.3rem black;
+                }
+
+            .kobeBox{
+                background-color: gold;
+                grid-column: 5 / 6;
+                grid-row: 2 / 3;
+                width: 100%;
+                height: 100%;
+            }
 
     .gigi{
         display: grid;
@@ -117,6 +139,7 @@ main{
             grid-column: 2 / 3;
             grid-row: 2 / 3;
             overflow: hidden;
+            border: 0.3rem solid white;
         }
 
             .sliderGigi ul{
@@ -131,7 +154,7 @@ main{
                 }
 
                     .sliderGigi img{
-                        animation: cambioKobe 10s infinite alternate linear;
+                        animation: cambioKobeGigi 10s infinite alternate linear;
                         height: 100%;
                         width: 31vw;
                     }
