--- a/css/kobeGigi/mainLakers.css
+++ b/css/kobeGigi/mainLakers.css
@@ -84,17 +84,17 @@ main{
                 border: 1px solid black;
             }
 
-            .gigiBox h2{
-                text-align: center;
-                font-family: 'Rubik', sans-serif;
-                margin-top: 0.2rem;
-            }
+                .gigiBox h2, .kobeBox h2{
+                    text-align: center;
+                    font-family: 'Rubik', sans-serif;
+                    margin-top: 0.2rem;
+                }
 
-            .gigiBox p{
-                font-family: 'Rubik', sans-serif;
-                line-height: 2rem;
-                margin-top: 0.2rem;
-            }
+                .gigiBox p, .kobeBox p{
+                    font-family: 'Rubik', sans-serif;
+                    line-height: 2rem;
+                    margin-top: 0.2rem;
+                }
 
             .and{
                 grid-column: 3 / 5;
@@ -113,11 +113,15 @@ main{
                 }
 
             .kobeBox{
-                background-color: gold;
+                background-color: white;
                 grid-column: 5 / 6;
                 grid-row: 2 / 3;
-                width: 100%;
-                height: 100%;
+                padding: 1rem;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                text-align: justify;
+                border: 1px solid black;
             }
 
     .gigi{
